--- a/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
+++ b/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="abR-Z4-m7F" customClass="QuoteCollectionViewCell" customModule="InspirationalReminders" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reuseCellIdentifier" id="abR-Z4-m7F" customClass="QuoteCollectionViewCell" customModule="InspirationalReminders" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="319" height="228"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
