--- a/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
+++ b/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
@@ -80,6 +80,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="bbi-Ay-roe" id="Xd8-gC-CVF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
