--- a/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
+++ b/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
@@ -18,12 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational Quotes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="smU-K9-2oj">
-                                <rect key="frame" x="72" y="36" width="230" height="43"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bbi-Ay-roe">
                                 <rect key="frame" x="28" y="110" width="319" height="557"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -44,12 +38,12 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffm-Ic-TBl">
                                                     <rect key="frame" x="20" y="12" width="279" height="204"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="0.19814854452054795" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="0.40159460616438358" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="ffm-Ic-TBl" firstAttribute="leading" secondItem="abR-Z4-m7F" secondAttribute="leading" constant="20" id="LR2-C3-G7J"/>
                                             <constraint firstItem="ffm-Ic-TBl" firstAttribute="top" secondItem="abR-Z4-m7F" secondAttribute="top" constant="12" id="SVC-rx-qu4"/>
@@ -66,6 +60,12 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="zlk-8h-oPg"/>
                                 </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational Quotes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="smU-K9-2oj">
+                                <rect key="frame" x="28" y="36" width="319" height="43"/>
+                                <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -74,7 +74,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="smU-K9-2oj" secondAttribute="bottom" constant="588" id="IAa-WR-Yem"/>
                             <constraint firstItem="bbi-Ay-roe" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="K7o-Ov-VJe"/>
                             <constraint firstItem="smU-K9-2oj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QtP-U5-WoY"/>
-                            <constraint firstItem="smU-K9-2oj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="72" id="Thh-fJ-kWj"/>
+                            <constraint firstItem="smU-K9-2oj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="Thh-fJ-kWj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bbi-Ay-roe" secondAttribute="trailing" constant="28" id="boE-5D-x4Q"/>
                             <constraint firstItem="bbi-Ay-roe" firstAttribute="top" secondItem="smU-K9-2oj" secondAttribute="bottom" constant="31" id="ngR-2J-UY8"/>
                         </constraints>
