Passing individual animations to notification extension

--- a/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
+++ b/InspirationalReminders/InspirationalReminders/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="zlk-8h-oPg"/>
                                 </connections>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspirational Quotes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="smU-K9-2oj">
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Will Goals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="smU-K9-2oj">
                                 <rect key="frame" x="28" y="36" width="319" height="43"/>
                                 <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="40"/>
                                 <nil key="textColor"/>
